Myaccount page cart icon change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,8 +58,8 @@
                         android:textColorHint="#000000"
                         android:paddingLeft="15dp"
                         android:paddingStart="15dp"
-                        android:paddingRight="10dp"
-                        android:textSize="@dimen/material_text_body1" />
+                        android:textSize="@dimen/material_text_body1"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
