--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,6 +7,6 @@
     android:minHeight="?attr/actionBarSize"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:contentInsetStart="10dp"
-    android:contentInsetLeft="10dp"
+   android:paddingRight="7dip"
+
     />
