--- a/app/src/main/res/layout/toolbar_search_icon.xml
+++ b/app/src/main/res/layout/toolbar_search_icon.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/search_icon_btn"
+    android:layout_width="70dp"
+    android:layout_height="wrap_content"
+    android:src="@drawable/search_new_2"
+    android:background="@android:color/transparent"
+    android:textColor="@android:color/white"
+    android:gravity="center"
+    android:paddingRight="-25dp"
 
-</LinearLayout>
+/>
