--- a/app/src/main/res/layout/cart_update_count.xml
+++ b/app/src/main/res/layout/cart_update_count.xml
@@ -3,24 +3,17 @@
 
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/notif_count"
-    android:layout_width="wrap_content"
+    android:layout_width="60dp"
     android:layout_height="wrap_content"
-    android:minWidth="32dp"
-    android:minHeight="10dp"
-
-
-    android:background="@drawable/cart_trans_new"
-    android:paddingBottom="5dp"
-
+    android:drawableBottom="@drawable/cart_trans_new"
+    android:drawablePadding="-18dp"
+    android:paddingBottom="10dp"
+    android:background="@null"
     android:text="0"
-    android:textSize="14sp"
+    android:textSize="12sp"
     android:textColor="@android:color/white"
     android:gravity="center"
-
-    android:singleLine="true"
-
+    >
 
 
-
-   >
 </Button>
