--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,10 +3,21 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:minHeight="?attr/actionBarSize"
+    android:layout_height="50dp"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-   android:paddingRight="7dip"
+    android:paddingRight="7dp"
+    android:paddingBottom="10dp"
+    >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#FFFFFF"
+        android:text="@string/app_name"
+        android:padding="5dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_gravity="center|bottom"
+        android:id="@+id/toolbar_title" />
 
-    />
+    </android.support.v7.widget.Toolbar>
