--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.MainActivity">
 
+ 
+
+    <item
+        android:id="@+id/action_search"
+        android:actionLayout="@layout/toolbar_search_icon"
+        app:showAsAction="always"
+        android:title="search"
+        />
+
     <item
         android:id="@+id/action_cart"
         android:actionLayout="@layout/cart_update_count"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title="cart"
 
         />
