--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -215,7 +215,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:stepSize=".5"
+                        android:stepSize="1"
 
                         android:layout_marginBottom="8dp"/>
 
@@ -307,6 +307,7 @@
                         android:text="Products Related to this item"
                         android:textSize="24sp"
                         android:layout_marginBottom="10dp"
+                        android:id="@+id/related_product_normal_text_view"
                         />
 
                     <com.workspaceit.themallbd.utility.RelatedProductListView
