--- a/app/src/main/res/layout/activity_show_related_product.xml
+++ b/app/src/main/res/layout/activity_show_related_product.xml
@@ -15,7 +15,7 @@
     android:layout_below="@+id/toolbar">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
         <com.workspaceit.themallbd.utility.RelatedProductListView
