--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -322,7 +324,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Load More"
-                        android:textAlignment="textStart"
+                        android:textAlignment="center"
                         android:background="@drawable/button_border_product_details"
                         android:paddingLeft="10dp"
                         android:id="@+id/load_more_button"
@@ -340,4 +342,3 @@
 </RelativeLayout>
 
 </ScrollView>
-
