--- a/app/src/main/res/layout/activity_show_related_product.xml
+++ b/app/src/main/res/layout/activity_show_related_product.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,13 +11,29 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 <ScrollView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/toolbar">
+    android:layout_below="@+id/toolbar"
+    android:id="@+id/scroll_view_show_related_product">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Products Related to this item"
+            android:textSize="26sp"
+            android:textColor="#000000"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/show_related_product_title_text"
+
+            />
+
 
         <com.workspaceit.themallbd.utility.RelatedProductListView
             android:layout_width="match_parent"
