Add dynamic review large refactor in two list view in home page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -237,7 +237,8 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:id="@+id/rv_horizontal">
+                        android:layout_height="match_parent"
+                        android:id="@+id/rv_horizontal">
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
