--- a/app/src/main/res/layout/activity_show_related_product.xml
+++ b/app/src/main/res/layout/activity_show_related_product.xml
@@ -35,7 +35,7 @@
             />
 
 
-        <com.workspaceit.themallbd.utility.RelatedProductListView
+        <com.workspaceit.themallbd.utility.CustomListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:dividerHeight="1dp"
@@ -43,7 +43,7 @@
             android:divider="@null"
             >
 
-        </com.workspaceit.themallbd.utility.RelatedProductListView>
+        </com.workspaceit.themallbd.utility.CustomListView>
 
     </LinearLayout>
 </ScrollView>
