--- a/app/src/main/res/layout/review_single_row.xml
+++ b/app/src/main/res/layout/review_single_row.xml
@@ -14,7 +14,7 @@
         android:numStars="5"
         android:stepSize=".5"
         android:rating="2.0"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         />
 
 
